hw6_lab10/tests/errors/sem_incr_boolean.kt
// EXPECT: semantic error — ++ on Boolean
fun main() {
    var b = true
    b++
}
